List of cards page layout improved so that the topbar and list of issues keep a spacing from the lateral bar.

--- a/components/Admin/Details/EditBar/EditBar.module.css
+++ b/components/Admin/Details/EditBar/EditBar.module.css
@@ -102,6 +102,13 @@
   }
 }
 
+@media screen and (max-width: 300px) {
+  .topCardInner {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
 /* @media screen and (max-width: 370px) { */
 @media screen and (max-width: 582px) {
   .buttons {
