--- a/components/Admin/List/IssueCard/IssueCard.module.css
+++ b/components/Admin/List/IssueCard/IssueCard.module.css
@@ -156,8 +156,3 @@
     margin-bottom: 4px;
   }
 }
-@media screen and (min-width: 1000px) {
-  .cardMain {
-    min-width: 800px;
-  }
-}
